Improved: Fixing defects reported by FindBugs, package org.apache.ofbiz.order.shoppingcart. (OFBIZ-9783)
Thanks Dennis Balkir for reporting and providing the patch.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-framework/trunk@1817641 13f79535-47bb-0310-9956-ffa450edef68